(lang dune 3.10)

(name regex)

(generate_opam_files true)

(source
  (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation "https://url/to/documentation")

(package
  (name regex)
  (synopsis "A short synopsis")
  (description "A longer description")
  (depends
    ocaml
    dune
    (pcre (= 7.5.0))
    ocamlregextkit)
  (tags
    (topics "to describe" "your project")))